# curmNormal

./: CMakeLists.txt  CMakeSettings.json  CTestConfig.cmake  Config.cmake.in  CumNormal.cpp  CumNormalConfig.h.in  LICENSE  MultiCPackConfig.cmake  README.md
CumFunctions/: CMakeLists.txt  bivar.cpp  bivar.h  trivar.cpp  trivar.h  univar.cpp  univar.h  utilities.cpp  utilities.h
